--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "libary-managerment",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/app.js"
@@ -15,6 +15,7 @@
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.21.4",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mysql2": "^3.2.3",
     "nodemon": "^2.0.22"
